# AIChipBenchmark

./: .gitignore  FAQ.md  LICENSE  README.md
QwenLLM/: nemotron_pretraining_qwen25_72b.py  nemotron_pretraining_qwen3_8b.py
llm/Alpaca-Lora/: README.md  trainer.py  trainer_utils.py
llm/BERT/: README.md  dataset.py  generate.py  main.py  pretrain.py
llm/Deepseek/: README.md  benchmark_all.py  deepseek_v2_lite_chat_full_alpaca_e3_32k_varlen.py  llm_profiler.py  throughput_hook.py
llm/Deepseek-Inference/: README.md  bench_final.sh  deepseek_v2.py
llm/EasyLLM/: README.md  internlm2-20b.yaml  internlm2-7b.yaml  internlm2-8b.yaml  llama3_8b_sft.yaml  mg_train_a800.sh
llm/GPT3/: README.md  train_gpt3_175b_distributed.sh  train_gpt3_175b_distributed_tgs.sh  training.py
llm/InternLM/: 65B_internlm_large.py  65B_loss_100.json  65B_sft.py  7B_sft_alpaca.py  README.md  cal_var.py
llm/InternLM/long context/: 7B_internlm2_long.py  README.md  build_dataloader.py
llm/InternLM/moe/: 7B_MoE4.py  README.md
llm/InternLM2/: 100B_internlm2.py  70B_internlm2.py  7B_internlm2.py  README.md
llm/InternVL/: README.md  ai2d_train_12k.jsonl  test.sh
llm/LLaMa-V1/: README.md  profile_ckp_time.py  test.sh  test_ckp.sh
llm/LLaMa-V2/: README.md  benchmark.py  benchmark_70B.sh  benchmark_7B.sh  req_env.txt
llm/LLaMa-V2/config/: 70B_llama2.py  7B_llama2.py  train_70B_withdata.py  train_7B_withdata.py
llm/LLaMa-V3/: README.md  nemotron_pretraining_llama3_70b.py  nemotron_pretraining_llama3_8b.py
llm/LLaMa-inference/: README.md  config.csv  profile_ckp_time.py  test_ckp.sh
llm/LLaMa-inference/PD分离/: README.md  bench_pd.sh  disagg_performance_benchmark_new.sh  log_parser_v2.py
llm/LLaMa-inference/场景化推理/: README.md  (+2 more)
llm/LLaVA-InternLM2-20B/: README.md  llava_internlm2_chat_20b_clip_vit_large_p14_336_e1_gpu8_pretrain.py
llm/Mixtral 8x7B/: README.md  mixtral_8x7b_instruct_full_oasst1_e3_copy2.py  mixtral_8x7b_instruct_qlora_oasst1_e3_copy.py  throughput_hook.py
llm/Open-sora/: README.md  config_utils.py  inference.py
llm/QwenVL/: README.md  training.py
llm/Qwenllm/: README.md  nemotron_pretraining_qwen25_72b.py  nemotron_pretraining_qwen25_7b.py  nemotron_pretraining_qwen2_72b.py  nemotron_pretraining_qwen3_30b_a3b.py  nemotron_pretraining_qwen3_8b.py
llm/Qwenvl/: README.md
llm/deepseek-inference/: benchmark_all.py  llm_profiler.py
llm/stable-diffusion/: README.md  config.csv  test.sh  train_text_to_image.py  txt2img.py
llm/stable-diffusion-inference/: README.md  demo_txt2img.py
llm/stable-diffusion-lora/: README.md  train_text_to_image_lora.py
models/: README.md  batch_detection.sh  batch_pretrain.sh  batch_segmentation.sh  custom_iter_timer_hook.py  iter_timer.py  models_run.sh  openmm_readme.md  pretrain.sh  readme-SProject.md  readme.md
models/classification/: readme.md
models/detection/: readme.md
models/imagenet_example/: README.md  main.py  perf.py  sbatch_run.sh
models/nlp/: readme.md
models/segmentation/: readme.md
models/tools/: command.py  model_configs.json  nv_nnunet_log_analyse.py  openmm_sbatch.sh  parse_openmm_results.py  run_all_models.sh  run_openmm_models.sh  slurm_run_nnunet.sh  test_openmm_models.py  utils.py
models/tools_internal/: model_configs.json  readme.md  run.sh
operators/: Dockerfile  run_all_op_test.sh
operators/accuracy_test/: cuda_ground_truth_gen.py  cuda_op_validate.py  example_conv2d.py  op_config.py  op_conv_config.py  readme.md  utils.py
operators/speed_test/: conv_f16.csv  conv_f32.csv  gemm_f16.csv  gemm_f32.csv  longtail_perf.csv  longtail_perf_gpu.csv  longtail_perf_gpu_fp16.csv  readme.md  test_conv.py  test_gemm.py
operators/speed_test/cuda_ops/: CMakeLists.txt  cuda_gemm.cpp  cudnn_convforward.cpp
operators/speed_test/cuda_ops/cmake/: CUDAComputeArch.cmake
render_sim/render_blender/: README.md
render_sim/render_blender/blender_benchmark_script/: PKG-INFO  info.py  main.py  pyproject.toml  render.py
render_sim/render_genesis/: README.md  requirements.txt
(+323 files in other folders)
