[tool.poetry]
name = "blender-benchmark-script"
version = "3.1.1"
description = "The Blender Benchmark Script"
authors = ["Sem Mulder <sem@mulderke.net>"]
packages = [
    { include = "vendor" },
    { include = "info.py" },
    { include = "main.py" },
    { include = "render.py" },
]


[tool.poetry.dependencies]
python = "^3.7.5"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 100
target_version = ['py37']
skip_string_normalization = true
exclude = 'vendor/'
